исправлены недочеты, добавлена папка services, создана сущность User

--- a/src/features/forms/RegistrationForm/registration.module.sass
+++ b/src/features/forms/RegistrationForm/registration.module.sass
@@ -78,6 +78,42 @@
   font-size: 14px
   color: $c-red-color
 
+.error_password
+  width: 300px
+  font-size: 14px
+  color: $c-red-color
+  margin-top: -20px
+
+.password_button
+  border: none !important
+  text-decoration: none !important
+  height: 26px !important
+  width: 26px !important
+  left: 57.5%
+  top: 59.5%
+
+.password_button:hover
+  background-color: white !important
+  color: white !important
+
+.passwordField
+  position: relative !important
+
+
+.togglePasswordButton
+  height: 36px !important
+  width: 36px !important
+  position: absolute !important
+  right: 10px
+  top: 50%
+  transform: translateY(-50%)
+  border: none !important
+  background-color: transparent !important
+  cursor: pointer
+
+.togglePasswordButton:hover
+  background-color: transparent !important
+
 
 
 
