--- a/src/features/forms/SettingsForm/settings.module.sass
+++ b/src/features/forms/SettingsForm/settings.module.sass
@@ -40,6 +40,9 @@
 
 
 .delete_button
+  display: flex
+  justify-content: center
+  align-items: center
   border: 2px solid $c-red-color
   height: 30px
   width: 123px
@@ -48,6 +51,7 @@
   color: $c-red-color
   font-size: 15px
   font-weight: 500
+  gap: 7px
 
 .delete_button:hover
   background: $c-red-color
