--- a/src/features/header/header.module.sass
+++ b/src/features/header/header.module.sass
@@ -2,7 +2,7 @@
 
 .header_wrapper
   height: 60px
-  width: 1440px
+  min-width: 100vh
   display: flex
   flex-direction: row
   align-items: center
