--- a/src/features/forms/StartupForm/startupform.module.sass
+++ b/src/features/forms/StartupForm/startupform.module.sass
@@ -74,6 +74,10 @@ textarea:focus
   border-left: 2px solid $c-grey-color
   padding-left: 30px
 
+.add_additional_photos_container
+  display: flex
+  gap: 10px
+
 .selected_photo
   width: 120px
   height: 100px
@@ -93,3 +97,33 @@ textarea:focus
   padding: 5px 10px
   cursor: pointer
   background-color: transparent
+
+
+.contacts_data_inputs
+  height: 25px
+  width: 200px
+  border-radius: 7px
+  border: 2px solid $c-dark-grey-color
+  outline: none
+  padding: 0 4px 0 4px
+
+.contacts_container
+  display: flex
+  flex-direction: column
+  gap: 15px
+
+.create_startup_button
+  margin-top: 25px
+  border: 2px solid $c-blue-color
+  height: 30px
+  width: 143px
+  background-color: $c-base-color
+  border-radius: 21px
+  color: $c-blue-color
+  font-size: 15px
+  justify-content: center
+  align-items: center
+
+.create_startup_button:hover
+  background: $c-blue-color
+  color: $c-base-color
