--- a/src/features/forms/StartupForm/startupform.module.sass
+++ b/src/features/forms/StartupForm/startupform.module.sass
@@ -127,3 +127,8 @@ textarea:focus
 .create_startup_button:hover
   background: $c-blue-color
   color: $c-base-color
+
+.error
+  color: red
+  padding-top: 5px
+  font-size: 14px
