--- a/src/features/ui/startups/startups.module.sass
+++ b/src/features/ui/startups/startups.module.sass
@@ -34,6 +34,7 @@
   justify-content: center
   padding: 0
   border: none
+  cursor: pointer
 
 .like_button:hover
   background-color: #d9d9e1
@@ -60,7 +61,6 @@
   display: flex
   justify-content: center
   padding-top: 20px
-
 
 .search_input
   display: flex
