added Admin Page

--- a/src/features/ui/startup/startup.module.sass
+++ b/src/features/ui/startup/startup.module.sass
@@ -86,3 +86,55 @@
   justify-content: center
   align-items: center
   text-align: center
+
+.custom_overlay
+  background-color: rgba(0, 0, 0, 0.75)
+
+
+.custom_modal
+  position: absolute
+  top: 50%
+  left: 50%
+  right: auto
+  bottom: auto
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+  background-color: #fff
+  border-radius: 8px
+  padding: 20px
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)
+  max-width: 400px
+  width: 100%
+  text-align: center
+
+.modal_header
+  display: flex
+  justify-content: space-between
+  align-items: center
+
+.close_button
+  background: none
+  border: none
+  font-size: 24px
+  cursor: pointer
+
+.modal_content
+  margin-top: 20px
+
+.contact_button
+  display: block
+  width: 100%
+  padding: 10px 20px
+  margin: 10px 0
+  background-color: #007BFF
+  color: white
+  border: none
+  border-radius: 4px
+  cursor: pointer
+  font-size: 16px
+  transition: background-color 0.3s ease
+
+
+.contact_button:hover
+  background-color: #0056b3
+
