fixed some bags and upgraded code

--- a/src/features/forms/RegistrationForm/registration.module.sass
+++ b/src/features/forms/RegistrationForm/registration.module.sass
@@ -77,12 +77,16 @@
   width: 300px
   font-size: 14px
   color: $c-red-color
+  margin: 0
+  padding: 0
+
 
 .error_password
   width: 300px
   font-size: 14px
   color: $c-red-color
-  margin-top: -20px
+  margin: 0
+  padding: 0
 
 .password_button
   border: none !important
