--- a/src/components/ui/profile/profile.module.sass
+++ b/src/components/ui/profile/profile.module.sass
@@ -52,10 +52,9 @@
   justify-content: center
   align-items: center
   gap: 80px
+  flex-wrap: wrap
 
 .startup
-  height: 310px
-  width: 300px
   padding: 10px
   border-radius: 7px
 
@@ -85,3 +84,8 @@
   width: 100%
   height: 100%
   object-fit: contain
+
+.startup_info
+  h4,p
+    margin: 0
+    padding: 0
