--- a/src/components/ui/startups/startups.module.sass
+++ b/src/components/ui/startups/startups.module.sass
@@ -10,10 +10,9 @@
 .startups_row
   display: flex
   gap: 80px
+  flex-wrap: wrap
 
 .startup
-  height: 290px
-  width: 300px
   padding: 10px
   border-radius: 7px
 
@@ -82,6 +81,12 @@
   outline: none
   border: none
   border-bottom: 1px solid $c-grey-color
+
+.startup_info
+    h4,p
+      margin: 0
+      padding: 0
+
 
 
 
