--- a/src/features/header/header.module.sass
+++ b/src/features/header/header.module.sass
@@ -50,10 +50,7 @@
     text-decoration: underline
     color: $c-blue-color
 
-.user_icon
-  width: 130px
-  height: 230px
-  cursor: pointer
+
 
 .menu_modal
   width: 150px
@@ -82,6 +79,16 @@
 .menu_modal_links
   font-weight: normal !important
 
+.customIcon
+  width: 40px
+  height: 40px
+  border-radius: 50%
+  cursor: pointer
+
+.defaultIcon
+  width: 130px
+  height: 230px
+  cursor: pointer
 
 
 
