исправил кучу недочетов, добавил страницу Категории, я задолбался .....

--- a/src/components/ui/profile/profile.module.sass
+++ b/src/components/ui/profile/profile.module.sass
@@ -1,3 +1,8 @@
+.category_wrapper
+  padding: 52px
+  display: flex
+  flex-direction: column
+
 .profile_wrapper
   display: flex
   flex-direction: column
