--- a/src/styles/colors.sass
+++ b/src/styles/colors.sass
@@ -1,5 +1,5 @@
 $c-base-color: white
 $c-blue-color: #002DFF
-$c-grey-color: #B9B9B9
+$c-grey-color: #726e6e
 $c-red-color: #EB5757
 $c-dark-grey-color: #848484
