updated code, fixed some bags, added comments for services

--- a/src/components/ui/category/category.module.sass
+++ b/src/components/ui/category/category.module.sass
@@ -12,6 +12,7 @@
   padding-top: 10px
 
 .category_container
+  display: flex
   padding: 10px 10px 15px 10px
   border-bottom: 1px solid #f3efef
   text-align: center
