--- a/src/components/ui/startups/startups.module.sass
+++ b/src/components/ui/startups/startups.module.sass
@@ -82,10 +82,19 @@
   border: none
   border-bottom: 1px solid $c-grey-color
 
+.category_row
+  display: grid
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr))
+  gap: 25px
+  padding: 10px 52px 10px 52px
+
 .startup_info
     h4,p
       margin: 0
       padding: 0
+
+.title_h3
+  padding: 10px 0 0 52px
 
 
 
