--- a/src/components/ui/myStartups/mystartups.module.sass
+++ b/src/components/ui/myStartups/mystartups.module.sass
@@ -4,8 +4,7 @@
   display: flex
   flex-direction: column
   padding: 52px
-  justify-content: center
-  align-items: center
+
 
 .my_startups_wrapper h1
   display: flex
@@ -83,9 +82,11 @@
     outline: black
 
 .create_startup_button
+  position: absolute
+  left: 80%
   border: 2px solid $c-blue-color
-  height: 30px
-  width: 100%
+  height: 20px
+  width: 160px
   padding: 5px
   background-color: $c-base-color
   border-radius: 21px
@@ -93,7 +94,14 @@
   font-size: 15px
   justify-content: center
   align-items: center
+  text-align: center
+  text-decoration: none
 
 .create_startup_button:hover
   background: $c-blue-color
   color: $c-base-color
+
+.my_startups_wrapper_header
+  display: flex
+  align-items: center
+  justify-content: center
