fixed some bags, updated code

--- a/src/components/ui/startup/startup.module.sass
+++ b/src/components/ui/startup/startup.module.sass
@@ -26,6 +26,7 @@
   padding: 0
   border: none
   cursor: pointer
+  margin-left: 10px
 
 .like_button:hover
   background-color: #d9d9e1
@@ -51,6 +52,13 @@
   color: $c-base-color
 
 .user_icon
+  width: 75px
+  height: 75px
+  object-fit: contain
+  margin: 0
+  padding: 0
+
+.addition_icon
   width: 45px
   height: 45px
   object-fit: contain
@@ -62,6 +70,8 @@
   align-items: center
   text-align: center
   height: 30px
+  margin: 0
+  padding: 0
 
 .additional_startup_info_wrapper
   border-top: 1px solid $c-grey-color
@@ -137,4 +147,35 @@
 
 .contact_button:hover
   background-color: #0056b3
+
+.link_container
+  transition: background-color 0.3s ease
+  border: 2px solid blue
+  height: 30px
+  width: 123px
+  background-color: white
+  border-radius: 21px
+  color: blue
+  font-size: 15px
+  display: flex
+  justify-content: center
+  align-items: center
+  text-align: center
+  text-decoration: none
+
+.link_container:hover
+  background: blue
+  color: white
+
+.swiper
+  display: flex
+  align-items: center
+  justify-content: center
+  width: 480px
+  height: 250px
+
+.swiper_image
+  width: 480px
+  height: 250px
+
 
