--- a/src/features/forms/RegistrationForm/registration.module.sass
+++ b/src/features/forms/RegistrationForm/registration.module.sass
@@ -60,6 +60,7 @@
     border-radius: 7px
     color: $c-blue-color
     font-size: 15px
+    transition: background-color 0.3s ease
 
   button:hover
     background-color: $c-blue-color
