--- a/src/features/forms/SettingsForm/settings.module.sass
+++ b/src/features/forms/SettingsForm/settings.module.sass
@@ -24,6 +24,7 @@
   gap: 50px
 
 .update_button
+  transition: background-color 0.3s ease
   border: 2px solid $c-blue-color
   height: 30px
   width: 123px
@@ -40,6 +41,7 @@
 
 
 .delete_button
+  transition: background-color 0.3s ease
   display: flex
   justify-content: center
   align-items: center
@@ -123,6 +125,7 @@ textarea:focus
   padding-top: 40px
 
 .delete_account_button
+  transition: background-color 0.3s ease
   border: 2px solid $c-red-color
   height: 30px
   width: 183px
@@ -169,6 +172,7 @@ textarea:focus
   gap: 40px
 
 .modal_button
+  transition: background-color 0.3s ease
   border: 2px solid $c-blue-color
   height: 30px
   width: 53px
