--- a/src/features/forms/StartupForm/startupform.module.sass
+++ b/src/features/forms/StartupForm/startupform.module.sass
@@ -115,6 +115,7 @@ textarea:focus
   gap: 15px
 
 .create_startup_button
+  transition: background-color 0.3s ease
   margin-top: 25px
   border: 2px solid $c-blue-color
   height: 30px
