--- a/src/features/header/header.module.sass
+++ b/src/features/header/header.module.sass
@@ -66,6 +66,7 @@
   //надо сделать плавное поялвние менюшки
 
   button
+    transition: background-color 0.3s ease
     border: none
     background-color: $c-base-color
     padding: 0
