--- a/src/components/ui/admin/admin.module.sass
+++ b/src/components/ui/admin/admin.module.sass
@@ -55,6 +55,7 @@
   height: 35px
   border-radius: 7px
   background-color: #4e89c0
+  transition: background-color 0.3s ease
 
 .admin_buttons:hover
   background-color: #007bff
