--- a/src/components/ui/myStartups/mystartups.module.sass
+++ b/src/components/ui/myStartups/mystartups.module.sass
@@ -96,6 +96,7 @@
   align-items: center
   text-align: center
   text-decoration: none
+  transition: background-color 0.3s ease
 
 .create_startup_button:hover
   background: $c-blue-color
