--- a/src/features/footer/footer.module.sass
+++ b/src/features/footer/footer.module.sass
@@ -1,7 +1,7 @@
 @import "../../styles/colors"
 
 .footer_wrapper
-  width: 1440px
+  min-width: 100vh
   height: 160px
   display: flex
   flex-direction: row
