--- a/src/features/forms/LogoutForm/logout.module.sass
+++ b/src/features/forms/LogoutForm/logout.module.sass
@@ -26,6 +26,7 @@
   gap: 40px
 
 .modal_button
+  transition: background-color 0.3s ease
   border: 2px solid $c-blue-color !important
   height: 30px
   width: 53px
