--- a/src/components/ui/startups/startups.module.sass
+++ b/src/components/ui/startups/startups.module.sass
@@ -9,8 +9,10 @@
 
 .startups_row
   display: flex
-  gap: 80px
+  gap: 100px
   flex-wrap: wrap
+  justify-content: center
+  padding-bottom: 30px
 
 .startup
   padding: 10px
