--- a/src/features/forms/StartupForm/startupform.module.sass
+++ b/src/features/forms/StartupForm/startupform.module.sass
@@ -88,7 +88,7 @@ textarea:focus
   position: relative
 
 .delete_selected_photo_button
-  background-image: url("src/assets/icons/red-delete-icon.svg")
+  background-image: url("/icons/red-delete-icon.svg")
   background-size: cover
   width: 18px
   height: 23px
