--- a/src/components/ui/startups/startups.module.sass
+++ b/src/components/ui/startups/startups.module.sass
@@ -12,7 +12,7 @@
   gap: 100px
   flex-wrap: wrap
   justify-content: center
-  padding-bottom: 30px
+  padding: 0 52px 30px 52px
 
 .startup
   padding: 10px
